TodoUI/MicroTodoUI/src/manifests-sri/Todo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: amazon
  ports:
  - port: 80
    targetPort: 80
