TodoUI/MicroTodoUI/src/manifests-sri/Todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appui-ingress
  labels:
    app: amazon
  # annotations:
  #   kubernetes.io/ingress.class: azure-application-gateway
  #   appgw.ingress.kubernetes.io/backend-path-prefix: "/"
  #   appgw.ingress.kubernetes.io/use-private-ip: "false" # Optional, depending on your setup
spec:
  ingressClassName: azure-application-gateway
  rules:
  # Rule for domain-based access
  - host: amazontodo.srijansharma.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-svc
            port:
              number: 80
  # Rule for IP-based access (No host specified) IP se bhi chal jayega
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-svc
            port:
              number: 80
